오예!! 회원가입 DB 연동완료

--- a/jm_project/WebContent/kdy/security/login_check.jspf
+++ b/jm_project/WebContent/kdy/security/login_check.jspf
@@ -11,5 +11,16 @@
 		out.println("</script>");
 		return;
 	}
+	
+	
+/*   강사님 파일
+		MemberDTO loginMember=(MemberDTO)session.getAttribute("loginMember");
 
+		if(loginMember==null) {
+			out.println("<script type='text/javascript'>");
+			out.println("location.href='"+request.getContextPath()+"/site/index.jsp?workgroup=error&work=error400';");
+			out.println("</script>");
+			return;
+		}
+*/		
 %>
