--- a/jm_project/WebContent/css/main.css
+++ b/jm_project/WebContent/css/main.css
@@ -88,8 +88,8 @@ margin-top:13px; font-weight:600;}
 #recomend{align-content:center; height: 100%; width:100%; margin-top:50px; position:relative;}
 	#recomend h3{font-size:25px; font-weight:bold; float:left; margin-bottom:15px; color:#484848;}
 	#recomend a.r_more{font-size:16px; color:#56297a; margin-left:10px; line-height:38px;font-weight:600; }
-.animation_canvas{overflow: hidden;  position: relative; width: 100%; height: 338px; clear:left;}
-.slider_panel img{width: 100%;}
+.animation_canvas{overflow: hidden;  position: relative; width: 100%; height: 338px;}
+.slider_panel {width: 100%;}
 
 /* slider panel */
 .slider_panel{width: 3925px; position: relative; }
